--- a/chess-front/package.json
+++ b/chess-front/package.json
@@ -19,6 +19,7 @@
     "react-chessboard": "^5.7.1",
     "react-dom": "^19.1.1",
     "socket.io-client": "^4.8.1",
+    "stockfish": "^17.1.0",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "playwright": "^1.57.0",
+    "stockfish.wasm": "^0.10.0",
     "vite": "^7.1.7"
   }
 }
