--- a/chess-front/package.json
+++ b/chess-front/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.16",
+    "chess-root": "file:..",
     "chess.js": "^1.4.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
