--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "chess-root",
   "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    "chess-front",
+    "chess-server"
+  ],
   "scripts": {
+    "install:all": "npm install",
     "dev": "concurrently \"npm run dev --host --prefix chess-server\" \"npm run dev --prefix chess-front\"",
     "build": "npm run build --prefix chess-front",
     "start": "npm --prefix chess-server start",
     "postinstall": ""
   },
   "devDependencies": {
-    "concurrently": "^9.1.0"
+    "concurrently": "^9.1.0",
+    "npm-run-all": "^4.1.5"
   }
 }
